fix toggle button alignment

--- a/src/components/json-output/JsonOutput.css
+++ b/src/components/json-output/JsonOutput.css
@@ -31,4 +31,5 @@ li > button {
 
 .toggle-button{
   margin-left: -24px;
+  position: absolute;
 }
